[package]
name = "alchemix_flow"
version = "0.1.0"
edition = "2021"

[lib]
name= "alchemix_flow"

[dependencies]
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
ts-rs = "9"

alchemix-entity-macros = { path = "../alchemix-entity-macros" }
alchemix-flow-macros = { path = "../alchemix-flow-macros" }
uuid = { version = "1.11.0", features = ["v4"] }
bincode = "1.3.3"
futures = "0.3.31"
async-trait = "0.1.83"
