[package]
name = "zbra-core"
version = "0.1.0"
edition = "2021"

[lib]
name= "zbra"

[dependencies]
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
ts-rs = "9"

zbra-entity-macros = { path = "../zbra-entity-macros" }
zbra-flow-macros = { path = "../zbra-flow-macros" }
uuid = { version = "1.11.0", features = ["v4"] }
bincode = "1.3.3"
futures = "0.3.31"
async-trait = "0.1.83"
